--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ body{
     width: 100%;
 }
 
-.content-tintuc-r-des,.content-tintuc-l-des{
+.content-tintuc-r-des,.content-tintuc-l-des,.content-video-list-content-des-information{
     display: flex;
     margin: 0 0 0 10px;
 }
@@ -267,17 +267,24 @@ body{
     margin: auto 12px;
 }
 
-.content-tintuc-content{
+.content-tintuc-content,.content-video-list-content-des-title{
     font-weight: 600;
     color: black;
     margin: 10px 0 0 10px;
 }
 
-.content-tintuc-des{
+.content-tintuc-des,.content-video-list-content-des-des,.content-video-list-content-des-information-date{
     font-weight: 400;
     opacity: 0.5;
     color: black;
-    margin: auto auto auto 0;
+    margin: auto auto auto 10px;
+}
+
+.content-video-list-content-des-des{
+    font-weight: 400;
+    opacity: 0.5;
+    color: black;
+    margin: 0 auto auto 10px;
 }
 
 .content-tintuc-name{
@@ -285,7 +292,7 @@ body{
     color: black;
 }
 
-.content-tintuc-xahoi{
+.content-tintuc-xahoi,.content-video-list-content-des-information-xahoi{
     color: #007882;
     font-weight: 600;
 }
@@ -302,7 +309,7 @@ body{
     margin-bottom: 15px;
 }
 
-.content-video-title-v{
+.content-video-title-v,.content-video-list-title{
     color: black;
     font-weight: 600;
     font-size: 18px;
@@ -342,7 +349,7 @@ body{
 
 .content-video-video-l-des{
     width: 100%;
-    height: 29.4%;
+    height: 33.4%;
     background-image: url("../images/video/boderbox.png");
     background-size: 100%;
     border-radius: 30px;
@@ -407,6 +414,76 @@ body{
 .content-video-video-l-des-date{
     color: white;
     opacity: 0.5;
+}
+
+.content-video-video-r-content{
+    color: black;
+    font-weight: 600;
+    margin-left: 10px;
+    margin-bottom: 0;
+    margin-top: 21px;
+}
+
+.content-video-video-r-view{
+    margin-left: 10px;
+    font-weight: 500;
+    color: black;
+}
+
+.content-video-video-r-date{
+    color: black;
+    opacity: 0.5;
+}
+
+.content-video-list{
+    width: 100%;
+    margin-top: 50px;
+}
+
+.content-video-list-content{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 40px;
+}
+
+.content-video-list-content-img{
+    width: 35%;
+}
+
+.content-video-list-content-des{
+    display: flex;
+    flex-direction: column;
+    width: 62%;
+}
+
+.content-video-list-content-des-information{
+    display: flex;
+}
+
+.content-video-list-content-des-title{
+    font-size: 20px;
+}
+
+.content-video-list-xemthem{
+    width: 100%;
+    display: flex;
+    height: 55px;
+    margin-top: 60px;
+}
+
+.content-video-list-xemthem-a{
+    padding-top: 15px;
+    text-align: center;
+    margin: 0 auto;
+    color: black;
+    border: 2px;
+    font-weight: 600;
+    width: 250px;
+    font-size: 17px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 70px;
 }
 
 @media (max-width: 1690px) {
