--- a/css/style.css
+++ b/css/style.css
@@ -479,6 +479,96 @@ body {
     border-radius: 70px;
 }
 
+.btn-menu-header{
+    display: none;
+    position: fixed;
+    background-color: white;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+}
+
+.btn-menu-header-ul{
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0 auto 0;
+    list-style: none;
+}
+
+.btn-menu-header-li-active{
+    margin-top: 50px;
+}
+
+.btn-menu-header-li,.btn-menu-header-li-active{
+    font-size: 28px;
+    color: black;
+    width: 100%;
+    margin-bottom:20px;
+    font-weight: 600;
+}
+
+.btn-menu-header-li{
+    opacity: 0.6;
+}
+
+.btn-menu-header-li-active{
+    color: #D93C23;
+}
+
+.btn-menu-header-li-upload{
+    margin-bottom: 0;
+    border-radius: 100px;
+    background-color: #D93C23;
+    padding: 10px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.btn-menu-header-li-upload-a{
+    color: white;
+}
+
+.btn-menu-header-li-upload,.btn-menu-header-li-loginre{
+    width: 95%;
+}
+
+.btn-menu-header-li-loginre{
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-menu-header-li-loginre-login,.btn-menu-header-li-loginre-re{
+    text-align: center;
+    width: 40%;
+    padding: 10px;
+    margin-top: 15px;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 100px;
+}
+
+.btn-menu-header-li-loginre-login{
+    color: black;
+}
+
+.btn-menu-header-li-loginre-re{
+    background-color: black;
+    color: white;
+}
+
+.fa-times{
+    font-size: 30px;
+    margin-right: 30px;
+}
+
+.logo-header-button{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 140px;
+}
+
 @media only screen and (max-width: 1024px ) {
     .button-header {
         display: none;
